fix horizontal scroll quirk and maintain sticky elements

--- a/app/styles/st-base/_layout.scss
+++ b/app/styles/st-base/_layout.scss
@@ -4,10 +4,6 @@
   position: fixed;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 body.lock-scroll {
   @media (max-width: $break-desktop-s) {
     overflow: hidden;
